# wakatime-readme-updater

./: .gitignore  Cargo.toml  Dockerfile  README.md  README_CN.md  RELEASE.md  action.yml  update-wakatime-stats.yml  wakatime-updater.toml.example
.github/workflows/: docker-image.yml  rust.yml  update-wakatime-stats.yml.example
src/: main.rs
src/cli/: args.rs  mod.rs  styles.rs
src/config/: loader.rs  mod.rs  toml.rs
src/formatter/: mod.rs
src/git/: cloner.rs  committer.rs  mod.rs  pusher.rs
src/readme/: mod.rs  template.rs  updater.rs  validator.rs
src/wakatime/: client.rs  mod.rs
src/wakatime/stats/: api.rs  mod.rs  types.rs
