[package]
name = "wakatime-readme-updater"
version = "0.0.1-alpha.1"
description = "A tool to update your GitHub README with WakaTime stats."
authors = ["AptS-1547 <apts-1547@esaps.net>"]
edition = "2024"

# 优化配置
[profile.dev]
opt-level = 1
lto = false
codegen-units = 16
panic = "unwind"
strip = false
incremental = true

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-debug]
inherits = "release"
codegen-units = 1
debug = true
strip = false
lto = false

[workspace]
members = ["."]

[dependencies]
